--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 .App {
+  height: 100%;
   text-align: center;
   background-color: #282c34;
 }
@@ -12,10 +13,6 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
-
-.App-header {
-  background-color: #282c34;
 }
 
 .App-link {
