--- a/src/App.scss
+++ b/src/App.scss
@@ -1,25 +1,25 @@
-.App {
+.app {
   height: 100%;
   text-align: center;
   background-color: #282c34;
 }
 
-.App-logo {
+.app-wrapper {
+  padding-bottom: 20px;
+}
+
+.app-logo {
   height: 40vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .app-logo {
+    animation: app-logo-spin infinite 20s linear;
   }
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
+@keyframes app-logo-spin {
   from {
     transform: rotate(0deg);
   }
