Added styles to general App style file. Added filter functionality to site. Added Filter component and styles.

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,13 @@
-.app {
+html,
+body,
+#root {
   height: 100%;
+}
+
+.app {
+  overflow: auto;
+  height: auto;
+  min-height: 100%;
   text-align: center;
   background-color: #282c34;
 }
