Added detail modal for issues. Added styles and animation to modal. Added detail fields to query call. Added style fix for issue when page loads and content stutters when pageBar loads in. Started re-design of navbar.

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,7 +9,11 @@ body,
   height: auto;
   min-height: 100%;
   text-align: center;
-  background-color: #282c34;
+  background-color: #3b4457;
+}
+
+header {
+  background-color: #353e50;
 }
 
 .app-wrapper {
